# RadioMdlPy

./: README.md  pyproject.toml
Julia/: Project.toml  README.md
Julia/src/: RadioMdl.jl  antenna_pattern.jl  astro_mdl.jl  coord_frames.jl  io.jl  obs_mdl.jl  sat_mdl.jl  types.jl
Julia/test/: test_mdl_obs.jl  tuto_mdl_obs.ipynb  tuto_mdl_obs_modified.ipynb  tuto_mdl_obs_modified.jl
modular_tutorials/: 01_basic_observation.py  02_satellite_interference.py  03_sky_mapping.py  04_power_spectral_density.py  05_doppler_effect.py  README.md
modular_tutorials/shared/: __init__.py  config.py  instrument_setup.py  plotting_utils.py  sky_models.py
src/: RadioMdl.py  __init__.py  antenna_pattern.py  astro_mdl.py  coord_frames.py  obs_mdl.py  radio_io.py  radio_types.py  sat_mdl.py
tutorial/: README.md  map_grid_no_sat_python.npy  map_grid_python.npy  result_beam_avoid_python.npy  result_cst_sat_gain_python.npy  result_freqs_python.npy  result_freqs_python_250401.npy  result_python.npy  result_src_python.npy  test_tuto_mdl_obs_python_simplified.py  test_tuto_mdl_obs_python_simplified_250401.py  test_tuto_mdl_obs_python_simplified_load.py  tuto_mdl_obs_python_simplified.ipynb  tuto_mdl_obs_python_simplified_250401.ipynb  tuto_mdl_obs_python_simplified_load.ipynb  tuto_radiomdl.ipynb  tuto_radiomdl.py  tuto_radiomdl_250410.ipynb  tuto_radiomdl_250410.py  tuto_radiomdl_doppler.py  tuto_radiomdl_load.ipynb  tuto_radiomdl_load.py
tutorial/data/: casA_trajectory_Westford_2025-02-18T15_00_00.000_2025-02-18T15_45_00.000.arrow
(+4 files in other folders)
